The documentation has been updated

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -967,7 +967,7 @@
     <p><big><span style="text-decoration: underline;">A few words about static
           sprite</span><br>
         <br>
-        The static sprite is a simple kind of sprites. It contains one frame
+        The static sprite is a simple kind of sprite. It contains one frame
         only.<br>
         <br>
       </big><big><span style="text-decoration: underline;"> Work with the static
@@ -1013,7 +1013,7 @@
     <p><big><span style="text-decoration: underline;">Some words about a sprite
           sheet</span><br>
         <br>
-        A sprite sheet is a special kind of animated sprites. Each frame has a
+        A sprite sheet is a special kind of animated sprite. Each frame has a
         fixed size. The sheet is a matrix of frames. Look at this picture to
         understand it.<br>
         <br>
@@ -1488,7 +1488,7 @@
         <br>
         <span style="font-style: italic;"> bool Timer::check_timer(); -</span>
         Return true and reinitialize the start point if the interval
-        between&nbsp; the stop and start points is large or equal to specific
+        between the stop and start points is large or equal to specific
         seconds.</big></p>
     <h2><a class="mozTocH2" name="mozTocId381935"></a><big>Chapter 4. Collision</big></h2>
     <p><big><span style="text-decoration: underline;">An important thing for any
@@ -1734,7 +1734,7 @@
         between zero and the number.<br>
         <br>
         <span style="font-style: italic;"> unsigned int get_texture_size(); -</span></big><big></big><big>
-        Return maximum the width or height of the texture.<br>
+        Return the maximum width or height of the texture.<br>
         <br>
         <span style="font-style: italic;">EUGENEGDK::BOX generate_box(const
           unsigned int x,const unsigned int y,const unsigned int width,const
@@ -1852,15 +1852,15 @@
         <br>
         <span style="font-style: italic;"> bool Keyboard::check_hold(const
           unsigned char code); -</span> Return true if a key with a specific
-        scan-code is pressed or held.<br>
+        scan code is pressed or held.<br>
         <br>
         <span style="font-style: italic;"> bool Keyboard::check_press(const
           unsigned char code); -</span> Return true if a key with a specific
-        scan-code was pressed.<span style="font-style: italic;"><br>
+        scan code was pressed.<span style="font-style: italic;"><br>
         </span></big></p>
     <p><big><span style="font-style: italic;">bool Keyboard::check_release(const
           unsigned char code); -</span> Return true if a key with a specific
-        scan-code was released.<span style="font-style: italic;"><br>
+        scan code was released.<span style="font-style: italic;"><br>
         </span></big></p>
     <p><big><span style="font-style: italic;">bool Keyboard::is_ready() const; -</span>
         Return true if the subsystem has already been initialized.<br>
@@ -2364,14 +2364,14 @@
         words for a curious programmer</big></h2>
     <p><big>The engine subsystems have a different internal structure. It has
         been hidden from you, and you don't have access to it. Do you want to
-        know about hidden things? Just read a next chapter.</big><br>
+        know about hidden things? Just read the next chapter.</big><br>
       <big> </big></p>
     <h2><a class="mozTocH2" name="mozTocId318160"></a><big>Chapter 2. Internal
         classes</big></h2>
     <p><big><span style="text-decoration: underline;">Internal classes</span><br>
         <br>
         Some classes are designed for internal use only. Don't touch them. What
-        are doing these strange classes?<br>
+        are these strange classes doing?<br>
         <br>
         <span style="text-decoration: underline;"> Microsoft Windows-specific
           classes</span><br>
@@ -2946,13 +2946,11 @@
       8.8.9: The source code synced with Black Game Development Kit 5.8.7.<br>
       8.9: The source code synced with Black Game Development Kit 5.8.8.<br>
       8.9.0.1: The documentation has been updated.<br>
-      8.9.1: The synchronization timer is backported from the Eugene game
-      development kit 8.8.1.<br>
+      8.9.1: The synchronization timer is backported from the Eugene game development kit 8.8.1.<br>
       8.9.2: The source code synced with Black Game Development Kit 5.9.<br>
       8.9.3: The source code synced with Black Game Development Kit 5.9.4.<br>
       8.9.4: The source code synced with Black Game Development Kit 5.9.6.<br>
-      8.9.5: The keyboard input subsystem is backported from the Neon game
-      development kit 7.9.1.<br>
+      8.9.5: The keyboard input subsystem is backported from the Neon game development kit 7.9.1.<br>
       8.9.6-8.9.7: The code page converter has improved.<br>
       8.9.8-8.9.9: The small changes.<br>
       9.0: The small bug has been fixed.<br>
@@ -2973,7 +2971,7 @@
       9.2.2.1: The documentation has been updated.<br>
       9.2.3: The small changes.<br>
       9.2.4: The small bug has been fixed.<br>
-      9.2.4.1: The documentation has been updated.<br>
+      9.2.4.1-9.2.4.2: The documentation has been updated.<br>
     </big>
   </body>
 </html>
