The documentation has been updated

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -410,7 +410,7 @@
         performance. You can also try to change the screen resolution if you
         have low rendering performance.<br>
         <br>
-        <span style="text-decoration: underline;"> Fps limitation</span><br>
+        <span style="text-decoration: underline;"> FPS limitation</span><br>
         <br>
         FPS is an important thing. Many FPS are needed for good animation, but
         it also needs high processor usage. The FPS limit is 60 by default. It
@@ -954,7 +954,7 @@
           &amp;target); -</span> Create a copy of the sprite if the storage of
         the target sprite is not empty.<br>
         <br>
-        <span style="font-style: italic;"> void Sprite::destroy():</span>
+        <span style="font-style: italic;"> void Sprite::destroy(); -</span>
         Destroy a sprite image and destroy the texture.</big><big><br>
       </big><big><br>
         <span style="text-decoration: underline;"> A sprite texture</span><br>
@@ -2188,7 +2188,7 @@
         What is a good choice for a game control device when the user plays an
         arcade or an old-school style video game? A gamepad. This engine
         provides simple access to it.</big></p>
-    <p><big><span style="text-decoration: underline;">Numbers of connected
+    <p><big><span style="text-decoration: underline;">Number of connected
           gamepads</span><br>
         <br>
         You can connect a few gamepads. Any connected gamepad has an internal
@@ -2971,7 +2971,7 @@
       9.2.2.1: The documentation has been updated.<br>
       9.2.3: The small changes.<br>
       9.2.4: The small bug has been fixed.<br>
-      9.2.4.1-9.2.4.2: The documentation has been updated.<br>
+      9.2.4.1-9.2.4.3: The documentation has been updated.<br>
     </big>
   </body>
 </html>
