The source code synced with the Gray game development kit 4.2

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2973,6 +2973,7 @@
       9.2.3: The small changes.<br>
       9.2.4: The small bug has been fixed.<br>
       9.2.4.1-9.2.4.4: The documentation has been updated.<br>
+      9.2.5: The source code synced with Gray Game Development Kit 4.2.<br>
     </big>
   </body>
 </html>
