The small bug has been fixed

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -339,7 +339,7 @@
   "mozTocId810132"></a><big>Chapter 3. License</big></h2>
   <p><big><span style="text-decoration: underline;">Eugene game
   development kit license</span><br>
-  <br></big> <big>Copyright (C) 2021 &ndash; 2024 Popov Evgeniy
+  <br></big> <big>Copyright (C) 2021 &ndash; 2025 Popov Evgeniy
   Alekseyevich</big></p>
   <p><big>&nbsp;This software is provided 'as&ndash;is', without
   any express or implied<br>
@@ -3300,6 +3300,7 @@
   9.2.4.1-9.2.4.4: The documentation has been updated.<br>
   9.2.5: The source code synced with the Gray Game Development Kit 4.2.<br>
   9.2.6-9.2.7: The text drawing subsystem has improved.<br>
-  9.2.7.1: The documentation has been updated.<br></big>
+  9.2.7.1: The documentation has been updated.<br>
+  9.2.8: The small bug has been fixed.<br></big>
 </body>
 </html>
