The small changes

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -3301,6 +3301,7 @@
   9.2.5: The source code synced with the Gray Game Development Kit 4.2.<br>
   9.2.6-9.2.7: The text drawing subsystem has improved.<br>
   9.2.7.1: The documentation has been updated.<br>
-  9.2.8: The small bug has been fixed.<br></big>
+  9.2.8: The small bug has been fixed.<br>
+  9.2.9: The small changes.<br></big>
 </body>
 </html>
