--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head>  
   <meta http-equiv="content-type" content="text/html; charset=us-ascii">
   <title>Programmer Reference</title>
 </head>
@@ -58,7 +58,8 @@
         <li><a href="#mozTocId679493">Chapter 1. The sub-namespace</a></li>
         <li><a href="#mozTocId29297">Chapter 2. Cartesian coordinates and screen coordinates</a></li>
         <li><a href="#mozTocId122919">Chapter 3. Cartesian coordinates and isometric coordinates</a></li>
-        <li><a href="#mozTocId143616">Chapter 4. Isometric Level</a></li>
+        <li><a href="#mozTocId175651">Chapter 4. Entity</a></li>
+        <li><a href="#mozTocId143616">Chapter 5. Isometric Level</a></li>
       </ul>
     </li>
     <li>
@@ -809,15 +810,26 @@
   <a href="https://en.wikipedia.org/wiki/Isometric_projection">Isometry</a> is a very popular way for pseudo-3D games. Many old-school games are isometric games.<br>
   <br></big> <big><span style="text-decoration: underline;">Coordinates conversion</span><br>
   <br>
-  You can convert the Cartesian coordinates to the isometric coordinates. You can also convert the isometric coordinates to the Cartesian coordinates. Just use the <span style="font-style: italic;">Isometric</span> class to do it. Let's look at the publicly available methods.<br></big><big><br>
+  You can convert the Cartesian coordinates to the isometric coordinates. You can also convert the isometric coordinates to the Cartesian coordinates. Just use the <span style="font-style: italic;">Isometric</span> class to do it. Let's look at the publicly available methods.<br></big> <big><br>
   <span style="font-style: italic;">static int Isometric::get_isometric_x(const int x, const int y); -</span> C</big><big>onvert the x-coordinate from</big> <big>the</big> <big>Cartesian system to</big> <big>the</big> <big>isometric system.<br>
   <br>
   <span style="font-style: italic;">static int Isometric::get_isometric_y(const int x, const int y); -</span></big> <big>C</big><big>onvert the y-coordinate from</big> <big>the</big> <big>Cartesian system to</big> <big>the</big> <big>isometric system.<br>
   <br>
   <span style="font-style: italic;">static int Isometric::get_cartesian_x(const int x, const int y); -</span></big> <big>C</big><big>onvert the x-coordinate from</big> <big>the</big> <big>isometric system to</big> <big>the</big> <big>Cartesian system.<br>
   <br>
-  <span style="font-style: italic;">static int Isometric::get_cartesian_y(const int x, const int y); -</span></big> <big>C</big><big>onvert the y-coordinate from</big> <big>the</big> <big>isometric system to</big> <big>the</big> <big>Cartesian system.<br></big></p>
-  <h2><a class="mozTocH2" name="mozTocId143616" id="mozTocId143616"></a><big>Chapter 4. Isometric Level<br></big></h2>
+  <span style="font-style: italic;">static int Isometric::get_cartesian_y(const int x, const int y); -</span></big> <big>C</big><big>onvert the y-coordinate from</big> <big>the</big> <big>isometric system to</big> <big>the</big> <big>Cartesian system.</big></p>
+  <h2><a id="mozTocId175651" class="mozTocH2" name="mozTocId175651"></a><big>Chapter 4. Entity</big></h2>
+  <p><big>The entity subsystem is intended for work with isometric objects. The <span style="font-style: italic;">Entity</span> class provides simple access to this subsystem. Let's look at the publicly available methods.</big></p>
+  <p><big><span style="font-style: italic;">Entity *Entity::get_handle(); -</span> Return the handle to the entity subsystem.<br>
+  <br>
+  <span style="font-style: italic;">void Entity::initialize(const int width, const int height); -</span> Initialize the subsystem.</big></p>
+  <p><big><span style="font-style: italic;">int Entity::get_width() const; -</span> Return the width of the object.<br>
+  <br>
+  <span style="font-style: italic;">int Entiy::get_height() const; -</span> Return the height of the object.</big><br></p>
+  <p><big><span style="font-style: italic;">int Entity::get_x(const int x, const int y) const; -</span> Return the target x-coordinate.<br>
+  <br>
+  <span style="font-style: italic;">int Entity::get_y(const int y, const int y) const; -</span> Return the target y-coordinate.<br></big></p>
+  <h2><a class="mozTocH2" name="mozTocId143616" id="mozTocId143616"></a><big>Chapter 5. Isometric Level<br></big></h2>
   <p><big>The isometric level subsystem is intended to help you create an isometric level. Just use the <span style="font-style: italic;">World</span> class to do it. Let's look at the publicly available methods.<br>
   <br>
   <span style="font-style: italic;">World *World::get_handle(); -</span> Return the handle to the isometric level subsystem.<br>
@@ -2040,6 +2052,7 @@
   9.2.7.1: The documentation has been updated.<br>
   9.2.8: The small bug has been fixed.<br>
   9.2.9: The small changes.<br>
-  9.3: The isometric subsystem has improved.<br></big>
+  9.3: The isometric subsystem has improved.<br>
+  9.3.1: The new subsystem has been added.<br></big>
 </body>
 </html>
