--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -58,7 +58,7 @@
         <li><a href="#mozTocId679493">Chapter 1. The sub-namespace</a></li>
         <li><a href="#mozTocId29297">Chapter 2. Cartesian coordinates and screen coordinates</a></li>
         <li><a href="#mozTocId122919">Chapter 3. Cartesian coordinates and isometric coordinates</a></li>
-        <li><a href="#mozTocId175651">Chapter 4. Entity</a></li>
+        <li><a href="#mozTocId175651">Chapter 4. Isometric level</a></li>
       </ul>
     </li>
     <li>
@@ -824,17 +824,18 @@
   <span style="font-style: italic;">static int Isometric::get_cartesian_x(const int x, const int y); -</span></big> <big>C</big><big>onvert the x-coordinate from</big> <big>the</big> <big>isometric system to</big> <big>the</big> <big>Cartesian system.<br>
   <br>
   <span style="font-style: italic;">static int Isometric::get_cartesian_y(const int x, const int y); -</span></big> <big>C</big><big>onvert the y-coordinate from</big> <big>the</big> <big>isometric system to</big> <big>the</big> <big>Cartesian system.</big></p>
-  <h2><a id="mozTocId175651" class="mozTocH2" name="mozTocId175651"></a><big>Chapter 4. Entity</big></h2>
-  <p><big>The entity subsystem is intended for work with isometric objects. The <span style="font-style: italic;">Entity</span> class provides simple access to this subsystem. Let's look at the publicly available methods.</big></p>
-  <p><big><span style="font-style: italic;">Entity *Entity::get_handle(); -</span> Return the handle to the entity subsystem.<br>
+  <h2><a id="mozTocId175651" class="mozTocH2" name="mozTocId175651"></a><big>Chapter 4. Isometric level<br></big></h2>
+  <p><big>The isometric level subsystem is intended to help you create an isometric level. Just use the <span style="font-style: italic;">Level</span> class to do it. Let's look at the publicly available methods.</big></p>
+  <p><big><span style="font-style: italic;">Level *Level::get_handle(); -</span> Return the handle to the isometric level subsystem.<br>
   <br>
-  <span style="font-style: italic;">void Entity::initialize(const int width, const int height); -</span> Initialize the subsystem.</big></p>
-  <p><big><span style="font-style: italic;">int Entity::get_width() const; -</span> Return the width of the object.<br>
+  <span style="font-style: italic;">void Level::initialize(const int tile_width, const int tile_height); -</span> Initialize the subsystem.<br></big></p>
+  <p><big><span style="font-style: italic;">void Level::set_offset(const int x_offset, const int y_offset); -</span> Set the coordinates offset.<br></big></p>
+  <p><big><span style="font-style: italic;">int Level::get_x_offset() const; -</span> Return the x-offset.<br>
   <br>
-  <span style="font-style: italic;">int Entiy::get_height() const; -</span> Return the height of the object.</big></p>
-  <p><big><span style="font-style: italic;">int Entity::get_x(const int x, const int y) const; -</span> Return the target x-coordinate.<br>
+  <span style="font-style: italic;">int Level::get_y_offset() const; -</span> Return the y-offset.<br></big></p>
+  <p><big><span style="font-style: italic;">int Level::get_x(const int row, const int column) const; -</span> Return the target x-coordinate.<br>
   <br>
-  <span style="font-style: italic;">int Entity::get_y(const int y, const int y) const; -</span> Return the target y-coordinate.</big></p>
+  <span style="font-style: italic;">int Level::get_y(const int row, const int column) const; -</span> Return the target y-coordinate.</big></p>
   <h1><a id="mozTocId564239" class="mozTocH1" name="mozTocId564239"></a><big>Part 5. Maps<br></big></h1>
   <h2><a id="mozTocId599694" class="mozTocH2" name="mozTocId599694"></a><big>Chapter 1. The sub-namespace</big></h2><big>All classes in this section are declared in the <span style="font-style: italic;">Map</span> sub-namespace.</big><big><br></big>
   <h2><a class="mozTocH2" name="mozTocId429738" id="mozTocId429738"></a><big>Chapter 1. Tile</big> <big>map</big></h2>
@@ -2053,7 +2054,8 @@
   9.2.9: The small changes.<br>
   9.3: The isometric subsystem has improved.<br>
   9.3.1: The new subsystem has been added.<br>
-  9.3.2-9.3.5:The isometric map subsystem has improved.<br>
-  9.3.6: The small changes.<br></big>
+  9.3.2-9.3.5: The isometric map subsystem has improved.<br>
+  9.3.6: The small changes.<br>
+  9.3.7-9.3.9: The isometric level subsystem has improved.<br></big>
 </body>
 </html>
