--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2056,6 +2056,7 @@
   9.3.1: The new subsystem has been added.<br>
   9.3.2-9.3.5: The isometric map subsystem has improved.<br>
   9.3.6: The small changes.<br>
-  9.3.7-9.3.9: The isometric level subsystem has improved.<br></big>
+  9.3.7-9.3.9: The isometric level subsystem has improved.<br>
+  9.4: The isometric coordinates subsystem has improved.<br></big>
 </body>
 </html>
