--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2059,6 +2059,7 @@
   9.3.7-9.3.9: The isometric level subsystem has improved.<br>
   9.4: The isometric coordinates subsystem has improved.<br>
   9.4.1: The tile map subsystem has improved.<br>
-  9.4.2: The small changes.<br></big>
+  9.4.2: The small changes.<br>
+  9.4.3: The sprite sheet subsystem has improved.<br></big>
 </body>
 </html>
