The small changes

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2061,6 +2061,7 @@
   9.4.1: The tile map subsystem has improved.<br>
   9.4.2: The small changes.<br>
   9.4.3: The sprite sheet subsystem has improved.<br>
-  9.4.4: The resource manager has improved.<br></big>
+  9.4.4: The resource manager has improved.<br>
+  9.4.5: The small changes.<br></big>
 </body>
 </html>
